--- a/package.json
+++ b/package.json
@@ -25,12 +25,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -44,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "eslint": "^8.48.0",
+    "gh-pages": "^6.0.0",
+    "tailwindcss": "^3.3.3"
   }
 }
